stop hiding scrollbar on online booking

--- a/src/modules/booking/css/booking.scss
+++ b/src/modules/booking/css/booking.scss
@@ -38,9 +38,6 @@
         color: $white;
         position: relative;
         overflow-y: scroll;
-        &::-webkit-scrollbar { 
-            display: none; 
-        }
 
         .booking-content-container{
 
